--- a/style.css
+++ b/style.css
@@ -2,94 +2,6 @@ body {
 	font-family: Muli,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
 }
 
-#container {
-	display: flex;
-	flex-wrap: wrap;
-	height: 800px;
-}
-
-#counter {
-	margin-bottom: 25px;
-}
-
-
-#animalList img {
-	height: 90px;
-}
-
-#animalList {
-	list-style-type: none;
-	width: 15%;
-}
-
-#animalList li {
-	padding-top: 20px;
-}
-
-#main {
-	margin: auto;
-	margin-top: 40px;
-	text-align: center;
-	width: 50%;
-}
-
-#main img {
-	height: 400px;
-}
-
-#AdminView {
-	width: 20%;
-	padding: 10px;
-	margin: 10px;
-	margin-top: 40px;
-}
-
-#AdminButton {
-	margin-bottom: center;
-	text-align: center;
-}
-
-#adminForm {
-	padding-bottom: 10px;
-	margin: auto;
-}
-
-#adminForm button {
-	
-}
-
-.displayNone {
-	display: none;
-}
-
-.displayFlex {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-#adminForm label {
-	width: 20%;
-}
-
-#adminForm input {
-	width: 67%;
-	margin-bottom: 1em;
-}
-
-button {
-	margin: 1em 0;
-}
-
-button:hover,
-img:hover {
-	cursor: pointer;
-}
-
-.colorized span {
-	color: pink;
-}
-
 /* NAVBAR CONTENTS */
 
 #navbar {
@@ -153,6 +65,97 @@ ul.dropdown {
 
 #projects:hover + .dropdown{
     display: block; /* Display the dropdown */
+}
+
+
+#container {
+	display: flex;
+	flex-wrap: wrap;
+	height: 800px;
+}
+
+#counter {
+	margin-bottom: 25px;
+}
+
+
+#animalList img {
+	height: 90px;
+}
+
+#animalList {
+	list-style-type: none;
+	width: 15%;
+}
+
+#animalList li {
+	padding-top: 20px;
+}
+
+#main {
+	margin: auto;
+	margin-top: 40px;
+	text-align: center;
+	width: 50%;
+}
+
+#main img {
+	height: auto;
+	max-height: 400px;
+	max-width: 100%;
+}
+
+#AdminView {
+	width: 20%;
+	padding: 10px;
+	margin: 10px;
+	margin-top: 40px;
+}
+
+#AdminButton {
+	margin-bottom: center;
+	text-align: center;
+}
+
+#adminForm {
+	padding-bottom: 10px;
+	margin: auto;
+}
+
+#adminForm button {
+	
+}
+
+.displayNone {
+	display: none;
+}
+
+.displayFlex {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+#adminForm label {
+	width: 20%;
+}
+
+#adminForm input {
+	width: 67%;
+	margin-bottom: 1em;
+}
+
+button {
+	margin: 1em 0;
+}
+
+button:hover,
+img:hover {
+	cursor: pointer;
+}
+
+.colorized span {
+	color: pink;
 }
 
 .hidden {
